@@ -262,8 +262,8 @@ table.list a:active		{color:#A8C5E5; text-decoration:none;}
 /*	Table for Money list (Donors / Sectors)
 	============================================= */
 table.money					{width:100%; border-collapse:collapse; table-layout:fixed;}
-table.money td				{text-align:right; color:#B8C8CD; font-size:1.0em; line-height:1.45em; word-spacing:0.7px; padding:0px; vertical-align:top; border-bottom:1px solid #1E90FF;}
-table.money td.col1			{text-align:left; background-color:rgba(74, 82, 54, 0.4); padding:15px 10px;}
+table.money td				{text-align:right; color:#B8C8CD; font-size:1.0em; line-height:1.45em; word-spacing:0.7px; padding:0px; vertical-align:top; border-bottom:1px solid #1E90FF; padding:15px 10px;}
+table.money td.col1			{text-align:left; background-color:rgba(74, 82, 54, 0.4);}
 table.money td.col2			{text-align:left;}
 table.money td.col3			{background-color:rgba(17, 46, 105, 0.2);}
 table.money td.col4			{background-color:rgba(17, 46, 105, 0.4);}
