@@ -1,6 +1,8 @@
 Development Portal (2014-08-06 shi)
 ==============================
 Linked "0" and "-" to description footer
+Remove links in tables
+Adjust padding in table columns
 
 
 Dashboard (2014-08-05 shi)
